# Rugby.-Manager

./: AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md
.claude/agents/: arbitre-regles-rugby.md
.github/workflows/: deploy-pages.yml
client/: index.html
docs/: ANALYSE_MATCH_REEL.md  REGLES_RUGBY.md  SPEC_JOUEUR.md  SPEC_MOTEUR_MATCH.md  SPEC_PLACEMENT_TACTIQUE.md  index.html  rugby-config.json  rugby-engine.js
docs/css/: style.css
docs/js/: club.js  clubUI.js  constants.js  main.js  matchState.js  renderer.js  rng.js  ui.js
engine/: rugby-engine.js
engine/ai/: JoueurAgent.cpp  JoueurAgent.hpp
engine/core/: Rng.hpp  Vector2.hpp
engine/model/: Joueur.hpp
engine/simulation/: ContexteMatch.hpp
examples/: exemple_joueur.cpp
rules/: README.md  world-rugby-laws-2025.txt
server/: simulate-batch.js  simulate-many.js  simulate.js  test-invariants.js  test-parcours-club.js  test-parcours-navigateur.js
